# single-version-override-repro

./: BUILD.bazel  MODULE.bazel  README.md  addressbook.proto  grpc_server.py  requirements.txt
