"Bazel dependencies"

module(name = "demo")

bazel_dep(name = "aspect_rules_py", version = "0.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0-alpha2")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.1")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "toolchains_protoc", version = "0.3.3")
bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)

single_version_override(
    module_name = "rules_proto_grpc_python",
    patches = ["//thirdparty:rules_proto_grpc_python.patch"],
)

#
# Begin LLVM and CC Toolchains
#

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_versions = {
        "": "16.0.0",
        "darwin-aarch64": "17.0.6",  # Apple Silicon Macs
    },
    stdlib = {
        "linux-x86_64": "stdc++",
        "linux-aarch64": "stdc++",
    },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
